feat: add create payment transaction API

--- a/src/main/resources/application.yaml.example
+++ b/src/main/resources/application.yaml.example
@@ -17,3 +17,14 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8443/realms/oauth2-api-gateway
+
+external:
+  corebank:
+    name: corebank
+    url: http://localhost:8081
+    path: /api/corebank
+  
+  biller:
+    name: biller
+    url: http://localhost:8082
+    path: /api/biller
