--- a/src/main/resources/application.yaml.example
+++ b/src/main/resources/application.yaml.example
@@ -18,6 +18,43 @@ spring:
         jwt:
           issuer-uri: ${ISSUER_URI:http://localhost:8443/realms/oauth2-api-gateway}
 
+resilience4j:
+  circuitbreaker:
+    instances:
+      billerBreaker:
+        registerHealthIndicator: true
+        failureRateThreshold: 50
+        slidingWindowSize: 10
+        slidingWindowType: COUNT_BASED
+        minimumNumberOfCalls: 5
+        permittedNumberOfCallsInHalfOpenState: 3
+        waitDurationInOpenState: 10s
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+
+  retry:
+    instances:
+      billerBreaker:
+        maxAttempts: 5
+        waitDuration: 3s
+
+logging:
+  level:
+    root: INFO
+    # '[org.springframework.security.oauth2]': DEBUG
+    # '[org.springframework.security.authentication]': DEBUG
+
+management:
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: always
+
 external:
   corebank:
     name: corebank
