feat: add publish transaction.success event to Kafka on successful payment

--- a/src/main/resources/application.yaml.example
+++ b/src/main/resources/application.yaml.example
@@ -18,6 +18,14 @@ spring:
         jwt:
           issuer-uri: ${ISSUER_URI:http://localhost:8443/realms/oauth2-api-gateway}
 
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer:
+        org.apache.kafka.common.serialization.StringSerializer
+      value-serializer:
+        org.springframework.kafka.support.serializer.JsonSerializer
+
 resilience4j:
   circuitbreaker:
     instances:
