--- a/docker-compose.yaml.example
+++ b/docker-compose.yaml.example
@@ -34,6 +34,32 @@ services:
     networks:
       - payment-gateway-cip
 
+  kafka-zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.0
+    container_name: kafka-zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+    networks:
+      - payment-gateway-cip
+
+  kafka:
+    image: confluentinc/cp-kafka:7.4.0
+    container_name: kafka
+    depends_on:
+      - kafka-zookeeper
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: kafka-zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    ports:
+      - "9092:9092"
+    networks:
+      - payment-gateway-cip
+
   payment-gateway-cip: 
     build: . 
     container_name: payment-gateway-cip
@@ -42,6 +68,7 @@ services:
       SPRING_DATASOURCE_USERNAME: admin_user
       SPRING_DATASOURCE_PASSWORD: secret123
       ISSUER_URI: http://keycloak:8443/realms/oauth2-api-gateway
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     ports: 
       - "8080:8080"
     depends_on: 
