--- a/src/main/resources/application.yaml.example
+++ b/src/main/resources/application.yaml.example
@@ -19,7 +19,7 @@ spring:
           issuer-uri: ${ISSUER_URI:http://localhost:8443/realms/oauth2-api-gateway}
 
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
     producer:
       key-serializer:
         org.apache.kafka.common.serialization.StringSerializer
